Fixed the width problem to take away white space.

--- a/themes/yell/sass/_elements.scss
+++ b/themes/yell/sass/_elements.scss
@@ -16,6 +16,9 @@ html {
 body {
 	background: $color__background-body; /* Fallback for when there is no custom background color defined. */
 	width:100%;
+	@include min-desktop{
+	width:1400px;
+	}
 }
 
 blockquote, q {
